--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -12,24 +12,32 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <ul>
-                    <div class="logo">
-                        <img src="logo.png" alt="News Logo">
-                    </div>
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CNewsProject</a>
-                    <li><a href="#">Local</a></li>
-                    <li><a href="#">Sweden</a></li>
-                    <li><a href="#">World</a></li>
-                    <li><a href="#">Economy</a></li>
-                    <li><a href="#">Sport</a></li>
-                </ul>
-                
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="logo.png" alt="News Logo" style="height: 50px;">
+                    CNewsProject
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Local</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Sweden</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">World</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Economy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Sport</a>
+                        </li>
+                    </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
