New update to Front Page.

--- a/CNewsProject/Views/Home/Index.cshtml
+++ b/CNewsProject/Views/Home/Index.cshtml
@@ -30,6 +30,9 @@
                     <li>CNY</li>
                     <li>GBP</li>
                 </ul>
+                <h2>Local news</h2>
+                <h2>Swedish news</h2>
+                <h2>Latest news</h2>
             </div>
         </aside>
     </main>
