I added views to different categories of news (local, Swedish, etc). I added NewsController that rules the buttons in the navbar.

--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Local</a>
+                            <a class="nav-link text-dark" asp-controller="News" asp-action="Local">Local</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Sweden</a>
+                            <a class="nav-link text-dark" asp-controller="News" asp-action="Sweden">Sweden</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">World</a>
+                            <a class="nav-link text-dark" asp-controller="News" asp-action="World">World</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Economy</a>
+                            <a class="nav-link text-dark" asp-controller="News" asp-action="Economy">Economy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Sport</a>
+                            <a class="nav-link text-dark" asp-controller="News" asp-action="Sport">Sport</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
