--- a/CNewsProject/Views/Account/Register.cshtml
+++ b/CNewsProject/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
 <div asp-validation-summary="All" class="text-danger"></div>
 
 
-@* Don't touch this though! *@
+@* Don't touch this though!!!!!!!!!!!!!!!!1! *@
 <form method="post">
     <div class="form-group">
         <label asp-for="UserName"></label>
@@ -25,5 +25,5 @@
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Register</button>
 </form>
