--- a/CNewsProject/Views/_ViewImports.cshtml
+++ b/CNewsProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CNewsProject
 @using CNewsProject.Models
+@using CNewsProject.Models.DataBase.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
