I corrected links to Latest News on views so you can go back to home page.

--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -28,7 +28,7 @@
                 </ul>
                 <h2><a href="@Url.Action("Local", "News")">Local news</a></h2>
                 <h2><a href="@Url.Action("Sweden", "News")">Swedish news</a></h2>
-                <h2><a href="@Url.Action("Latest", "News")">Latest news</a></h2>
+                <h2><a href="@Url.Action("Index", "Home")">Latest news</a></h2>
             </div>
         </div>
     </aside>
