--- a/CNewsProject/Views/Shared/_WeatherPartial.cshtml
+++ b/CNewsProject/Views/Shared/_WeatherPartial.cshtml
@@ -1,8 +1,17 @@
-﻿@using CNewsProject.Models.Api.Weather
+﻿@model CNewsProject.Models.Api.Weather.WeatherStats
 
-@model WeatherStats 
-
-<ul>
-	<li>@Model.Hourly</li>
-	<li>@Model.Hourly_units</li>
-</ul>
+<div class="weather-details">
+    <div class="weather-info">
+        <p>Latitude: @Model.Latitude</p>
+        <p>Longitude: @Model.Longitude</p>
+        <p>Timezone: @Model.Timezone</p>
+        <p>Elevation: @Model.Elevation m</p>
+        <p>Hourly Temperature:</p>
+        <ul>
+            @for (int i = 0; i < Model.Hourly.Time.Count; i++)
+            {
+                <li>@Model.Hourly.Time[i]: @Model.Hourly.Temperature_2m[i]°C</li>
+            }
+        </ul>
+    </div>
+</div>
