--- a/CNewsProject/Views/Shared/_WeatherPartial.cshtml
+++ b/CNewsProject/Views/Shared/_WeatherPartial.cshtml
@@ -6,12 +6,7 @@
         <p>Longitude: @Model.Longitude</p>
         <p>Timezone: @Model.Timezone</p>
         <p>Elevation: @Model.Elevation m</p>
-        <p>Hourly Temperature:</p>
-        <ul>
-            @for (int i = 0; i < Model.Hourly.Time.Count; i++)
-            {
-                <li>@Model.Hourly.Time[i]: @Model.Hourly.Temperature_2m[i]°C</li>
-            }
-        </ul>
+        <p>Temperature: </p>
+        <p> @Model.Hourly.Temperature_2m[DateTime.Now.Hour]°C</p>
     </div>
 </div>
