--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -127,6 +127,8 @@ nav ul li a:hover {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .main-article h2 {
@@ -144,4 +146,19 @@ nav ul li a:hover {
 
 .navbar-nav .nav-link {
     font-size: 1.25rem;
+}
+
+.item {
+    flex: 1 1 200px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
 }
