--- a/CNewsProject/Views/Shared/_WeatherPartial.cshtml
+++ b/CNewsProject/Views/Shared/_WeatherPartial.cshtml
@@ -6,7 +6,6 @@
         <p>Longitude: @Model.Longitude</p>
         <p>Timezone: @Model.Timezone</p>
         <p>Elevation: @Model.Elevation m</p>
-        <p>Temperature: </p>
-        <p> @Model.Hourly.Temperature_2m[DateTime.Now.Hour]°C</p>
+        <p>Temperature: @Model.Hourly.Temperature_2m[DateTime.Now.Hour]°C</p>
     </div>
 </div>
