--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using CNewsProject.Service
+@inject UserManager<AppUser> userManager
+@inject IHttpContextAccessor httpContextAccessor;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -37,6 +41,27 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="News" asp-action="Sport">Sport</a>
                         </li>
+                        @{
+                            if (httpContextAccessor.HttpContext.User != null)
+                            {
+                                AppUser user = await userManager.GetUserAsync(httpContextAccessor.HttpContext?.User);
+                                bool isJournalist;
+
+                                if (user != null)
+                                {
+                                    isJournalist = await userManager.IsInRoleAsync(user, "Journalist");
+                                    
+                                    if (isJournalist)
+                                    {
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-controller="Journalist" asp-action="Index">Journalist</a>
+                                        </li>
+                                    }
+                                }
+
+                               
+                            }
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                     <form class="d-flex" role="search">
