Search function maybe done, almost

--- a/CNewsProject/Views/News/Search.cshtml
+++ b/CNewsProject/Views/News/Search.cshtml
@@ -5,6 +5,15 @@
 
 <h1>Search</h1>
 
-<div>
-    <input /> <button class="btn btn-sm btn-outline-success" type="submit">Search</button>
-</div>
+<form method="post">
+    <input name="search" /> <button class="btn btn-sm btn-outline-success" type="submit">Search</button><br>
+    <select name="category">
+        <option value="">Category</option>
+        <option value="Local">Local</option>
+        <option value="Sweden">Sweden</option>
+        <option value="World">World</option>
+        <option value="Economy">Economy</option>
+        <option value="Sport">Sport</option>
+    </select>
+    
+</form>
