--- a/CNewsProject/Views/Admin/Roles.cshtml
+++ b/CNewsProject/Views/Admin/Roles.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IdentityRole>?
+﻿@model IEnumerable<IdentityRole>
 @{
     ViewData["Title"] = "ROLES";
 }
@@ -9,25 +9,7 @@
 <table class="table table-sm table-bordered table-bordered">
     <tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr>
 
-    @{
-        IdentityRole adminRole = Model.Single(r => r.Name == "Admin");
-    }
-
-    <tr>
-        <td>@adminRole.Id</td>
-        <td>@adminRole.Name</td>
-        <td i-role="@adminRole.Id"></td>
-
-        <td>
-            <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@adminRole.Id">Update</a>
-        </td>
-        <td>
-            <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@adminRole.Id">Delete</a>
-        </td>
-
-    </tr>
-
-    @foreach (var role in Model.Where(r => r.Name != "Admin"))
+    @* @foreach (var role in Model)
     {
         <tr>
             <td>@role.Id</td>
@@ -42,6 +24,46 @@
             </td>
 
         </tr>
+    } *@
+
+    @{
+        if (Model != null)
+        {
+            if (Model.Any(r => r.NormalizedName == "ADMIN"))
+            {
+                IdentityRole adminRole = Model.Single(r => r.Name == "Admin");
+                <tr>
+                    <td>@adminRole.Id</td>
+                    <td>@adminRole.Name</td>
+                    <td i-role="@adminRole.Id"></td>
+
+                    <td>
+                        <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@adminRole.Id">Update</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@adminRole.Id">Delete</a>
+                    </td>
+
+                </tr>
+            }
+
+            @foreach (var role in Model.Where(r => r.Name != "Admin"))
+            {
+                <tr>
+                    <td>@role.Id</td>
+                    <td>@role.Name</td>
+                    <td i-role="@role.Id"></td>
+
+                    <td>
+                        <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
+                    </td>
+
+                </tr>
+            }
+        }
     }
    
 </table>
