Fixed EXchange api handling

--- a/CNewsProject/Views/Shared/_CurrencyExchangeRatesPartial.cshtml
+++ b/CNewsProject/Views/Shared/_CurrencyExchangeRatesPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model CNewsProject.Models.Api.CurrencyExchangeRate.CurrencyExchangeRate
+﻿@* @model CNewsProject.Models.Api.CurrencyExchangeRate.CurrencyExchangeRate *@
 
 <div class="exchange-rates">
     <h2>Currency exchange rates</h2>
