--- a/CNewsProject/Views/Home/Index.cshtml
+++ b/CNewsProject/Views/Home/Index.cshtml
@@ -23,11 +23,11 @@
 
             </div>
                 <ul>
-                    <li>USD</li>
-                    <li>EUR</li>
-                    <li>JPY</li>
-                    <li>CNY</li>
-                    <li>GBP</li>
+                    <li>USD : @Model.CurrencyExchangeRates.USD</li>
+                    <li>EUR : @Model.CurrencyExchangeRates.EUR</li>
+                    <li>JPY : @Model.CurrencyExchangeRates.JPY</li>
+                    <li>CNY : @Model.CurrencyExchangeRates.CNY</li>
+                    <li>GBP : @Model.CurrencyExchangeRates.GBP</li>
                 </ul>
                 <h2><a href="@Url.Action("Local", "News")">Local news</a></h2>
                 <h2><a href="@Url.Action("Sweden", "News")">Swedish news</a></h2>
