--- a/CNewsProject/Views/Home/Index.cshtml
+++ b/CNewsProject/Views/Home/Index.cshtml
@@ -19,16 +19,16 @@
             </div>
             <div class="card">
                 <h2>Exchange rates</h2>
-                @* <partial name="_CurrencyExchangeRatesPartial" model="@Model.CurrencyExchangeRate" /> *@
+                <partial name="_CurrencyExchangeRatesPartial" model="@Model.CurrencyExchangeRates" /> 
 
             </div>
-                <ul>
+                @* <ul>
                     <li>USD : @Model.CurrencyExchangeRates.USD</li>
                     <li>EUR : @Model.CurrencyExchangeRates.EUR</li>
                     <li>JPY : @Model.CurrencyExchangeRates.JPY</li>
                     <li>CNY : @Model.CurrencyExchangeRates.CNY</li>
                     <li>GBP : @Model.CurrencyExchangeRates.GBP</li>
-                </ul>
+                </ul> *@
                 <h2><a href="@Url.Action("Local", "News")">Local news</a></h2>
                 <h2><a href="@Url.Action("Sweden", "News")">Swedish news</a></h2>
                 <h2><a href="@Url.Action("Economy", "News")">Economy news</a></h2>                
