--- a/CNewsProject/Views/News/Article.cshtml
+++ b/CNewsProject/Views/News/Article.cshtml
@@ -3,6 +3,6 @@
 <div>
  <img src="@Model.ImageLink"/>
  <h1>@Model.Headline</h1>
- <div>[Need to get journalist here] - @Model.DateStamp</div><div>[views symbol]@Model.Views [likes symbol]@Model.Likes</div>
+ <div>[Need to get journalist here] - @Model.PublishedDate</div><div>[views symbol]@Model.Views [likes symbol]@Model.Likes</div>
  <div>@Model.Content</div>
 </div>
