--- a/CNewsProject/Views/_ViewImports.cshtml
+++ b/CNewsProject/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper CNewsProject.CustomTagHelpers.*, CNewsProject
+@addTagHelper *, CNewsProject
 
