--- a/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
@@ -5,12 +5,13 @@
 
 @{
     List<string> statuses = new() { "Pending", "Approved", "Declined" };
+    List<string> colours = new() { "bg-warning", "bg-success", "bg-danger" };
     List<Article> list = new();
 
     for(int i = 0; i < 3; i++)
     {
         <h3>@statuses[i]</h3>
-        <div style="overflow:auto; max-height:150px" class="mb-4">
+        <div style="overflow:auto; max-height:150px" class="mb-4 @colours[i]">
             @{
                 list = (List<Article>)Model.GetType().GetProperty(statuses[i])!.GetValue(Model)!;
 
@@ -73,5 +74,6 @@
             <h4>Article: @article.Headline</h4>
         }
     }
-</div> *@
+</div>
 
+ *@
