--- a/CNewsProject/Views/Home/Index.cshtml
+++ b/CNewsProject/Views/Home/Index.cshtml
@@ -28,12 +28,12 @@
                 <h2><a href="@Url.Action("Economy", "News")">Economy news</a></h2>                
             </div>
         </aside>
-   @*      <section class="articles">
+        <section class="articles">
             @foreach (var article in Model.Articles)
             {
                 <partial name="_ArticlePartial" model="article" />
             }
-        </section>     *@
+        </section>    
     </main>
 </body>
 </html>
