--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -1,4 +1,4 @@
-﻿@model CNewsProject.Models.ViewModels.NewsVM
+﻿@* @model CNewsProject.Models.ViewModels.NewsVM *@
 
 @{
     ViewData["Title"] = "Economy News";
@@ -19,9 +19,9 @@
             </div>
         </div>
         <div class="card mb-4">
-            <div class="card-body">
+             <div class="card-body"> 
                 <h2>Exchange rates</h2>
-                <partial name="_CurrencyExchangeRatesPartial" model="@Model.CurrencyExchangeRates" />
+                @* <partial name="_CurrencyExchangeRatesPartial" model="@Model.CurrencyExchangeRates" /> *@
                 @* <ul>
                     <li>USD</li>
                     <li>EUR</li>
@@ -32,7 +32,7 @@
                 <h2><a href="@Url.Action("Local", "News")">Local news</a></h2>
                 <h2><a href="@Url.Action("Sweden", "News")">Swedish news</a></h2>
                 <h2><a href="@Url.Action("Index", "Home")">Latest news</a></h2>
-            </div>
+             </div>
         </div>
     </aside>
 </main>
