--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CNewsProject.styles.css" asp-append-version="true" />
-   @*  <style>
+    <style>
         aside {
             flex: 1;
             display: flex;
@@ -203,7 +203,7 @@
             display: flex;
             flex-direction: column;
             }                    
-    </style> *@
+    </style>
 </head>
 <body>
     <header>
