Images Resize DONE Decline NOW available Vital roles no longer DELETABLE

--- a/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
@@ -31,8 +31,8 @@
     }
 }
 
-@* 
-<h3>Pending</h3>
+
+@* <h3>Pending</h3>
 <div style="overflow:auto; max-height:150px">
     @{
         if (Model.Pending.Count() == 0)
