--- a/CNewsProject/Views/ThePublisher/Review.cshtml
+++ b/CNewsProject/Views/ThePublisher/Review.cshtml
@@ -32,3 +32,5 @@
 
     <button type="submit" class="btn btn-primary">Preview</button>
 </form>
+
+<a asp-action="Decline" asp-route-id="@Model.ArticleId" class="btn btn-danger">Decline</a>
