--- a/CNewsProject/Views/Admin/Roles.cshtml
+++ b/CNewsProject/Views/Admin/Roles.cshtml
@@ -11,43 +11,44 @@
 
     @* @foreach (var role in Model)
     {
-        <tr>
-            <td>@role.Id</td>
-            <td>@role.Name</td>
-            <td i-role="@role.Id"></td>
+    <tr>
+    <td>@role.Id</td>
+    <td>@role.Name</td>
+    <td i-role="@role.Id"></td>
 
-            <td>
-                <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
-            </td>
-            <td>
-                <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
-            </td>
+    <td>
+    <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
+    </td>
+    <td>
+    <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
+    </td>
 
-        </tr>
+    </tr>
     } *@
 
     @{
         if (Model != null)
         {
-            if (Model.Any(r => r.NormalizedName == "ADMIN"))
+
+            @foreach (var role in Model.Where(r => r.Name == "Admin" || r.Name == "Subscriber" || r.Name == "The Publisher" || r.Name == "Journalist"))
             {
-                IdentityRole adminRole = Model.Single(r => r.Name == "Admin");
                 <tr>
-                    <td>@adminRole.Id</td>
-                    <td>@adminRole.Name</td>
-                    <td i-role="@adminRole.Id"></td>
+                    <td>@role.Id</td>
+                    <td>@role.Name</td>
+                    <td i-role="@role.Id"></td>
 
                     <td>
-                        <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@adminRole.Id">Update</a>
+                        <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
                     </td>
                     <td>
-                        <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@adminRole.Id">Delete</a>
+                        <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
                     </td>
 
                 </tr>
             }
 
-            @foreach (var role in Model.Where(r => r.Name != "Admin"))
+
+            @foreach (var role in Model.Where(r => r.Name != "Admin" && r.Name != "Subscriber" && r.Name != "The Publisher" && r.Name != "Journalist"))
             {
                 <tr>
                     <td>@role.Id</td>
@@ -65,5 +66,5 @@
             }
         }
     }
-   
+
 </table>
